<resources>
    <string name="app_name">Movies Manager</string>
    <string name="label_you_havent_movies">Você não tem filmes cadastrados</string>
    <string name="label_add_movie">Adicionar Filme</string>
    <string name="label_edit_item">Editar item</string>
    <string name="label_movie_name">Nome do filme</string>
    <string name="label_movie_genre">Gênero</string>
    <string name="label_movie_studio">Estúdio ou produtora</string>
    <string name="label_release_year">Ano</string>
    <string name="label_movie_duration">Tempo (em min)</string>
    <string name="label_movie_duration_in_minutes">Tempo</string>
    <string name="label_watched">Já assistiu?</string>
    <string name="label_movie_score">Nota</string>
    <string name="label_save">Salvar</string>
    <string name="label_edit_movie">Editar filme</string>
    <string name="label_remove_movie">Remover filme</string>
    <string name="label_movie_added">Filme adicionado!</string>
    <string name="label_movie_changed">Filme alterado!</string>
    <string name="label_movie_deleted">Filme removido!</string>
    <string name="label_uninformed">Não informado</string>
    <string name="label_x_minutes">%1$s minutos</string>
    <string name="label_movie_watched">Assistido -</string>
    <string name="label_movie_not_watched">Não assistido -</string>
    <string name="label_not_yet_rated">Ainda não avaliado</string>
    <string name="label_detail_score">Nota %1$s</string>
    <string name="label_order_by">Ordenar por:</string>
    <string name="label_order_name">Nome</string>
    <string name="label_order_by_name">Nome</string>
    <string name="label_order_by_score">Nota</string>
</resources>