<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".presentation.view.fragment.ListMoviesFragment">

    <TextView
        android:id="@+id/textOrderByLabel"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_width="wrap_content"
        android:text="@string/label_order_by"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOrderByName"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/label_order_by_name"
        app:layout_constraintEnd_toStartOf="@id/buttonOrderByScore"
        app:layout_constraintStart_toEndOf="@id/textOrderByLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOrderByScore"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/label_order_by_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonOrderByName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListMovies"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textOrderByLabel"
        tools:itemCount="6"
        tools:listitem="@layout/tile_movie" />

    <ProgressBar
        android:id="@+id/loadingListMovie"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:gravity="center"
        android:id="@+id/textEmptyState"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:text="@string/label_you_havent_movies"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:contentDescription="@string/label_add_movie"
        android:id="@+id/buttonAddNewMovie"
        android:layout_gravity="bottom|end"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="16dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/colorPrimary"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>